[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://addons/debug_info_plugin/ProgressDisk.gd" id="1_qjmne"]
[ext_resource type="Script" path="res://addons/debug_info_plugin/DebugInfoPanelSlot.gd" id="1_tjq6i"]

[node name="DebugInfoPanelSlot" type="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
script = ExtResource("1_tjq6i")

[node name="TimerProgressDisk" type="Control" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("1_qjmne")
max = 5.0
start_angle = -3.14159
horizontal_aligment = 0
vertical_aligment = 0

[node name="InfoLabel" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Hello"
fit_content = true
